fix bottom spacing on pdf

--- a/src/app/components/orders/order-details/order-details.component.scss
+++ b/src/app/components/orders/order-details/order-details.component.scss
@@ -105,6 +105,8 @@
   }
 
   .pdf-bottom-details {
+    margin-top: -15mm !important;
+    padding-bottom: 15mm !important;
     page-break-before: avoid;
     page-break-inside: avoid;
   }
